# osm-admin-lookup

./: .travis.yml  Cargo.toml  Readme.md
src/: bench.rs  build-rtree.rs  bulk.rs  lib.rs  locate.rs  location.rs  main.rs  mgns.rs  server.rs  service.rs
src/boundary/: mod.rs
src/geojson/: mod.rs
src/observability/: mod.rs
src/service/: mod.rs
tests/: integration.rs  locate.rs
tests/data/: schwachhausen.pbf
