[package]
name = "osm-admin-hierarchies"
version = "0.2.0"
authors = ["Magnus Kulke <mkulke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "locate"
path = "src/locate.rs"

[[bin]]
name = "bulk"
path = "src/bulk.rs"

[[bin]]
name = "build-rtree"
path = "src/build-rtree.rs"

[[bin]]
name = "service"
path = "src/service.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"

[dependencies]
bincode = "1.1"
easybench = "1.0"
rstar = { version = "0.6", features=["serde"] }
osmpbfreader = "0.14"
osm_boundaries_utils = "0.7"
geojson = { version = "0.19", features=["geo-types"] }
geo-types = { version = "0.6", features=["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geo = "0.14"
rayon = "1.3"
structopt = "0.3"
env_logger = "0.7"
log = "0.4"
futures = "0.3"
actix-web = "3.1"
actix-utils = "2.0"
actix-rt = "1.1.1"
derive_more = "0.99"

[dev-dependencies]
reqwest = "0.10"
# tokio = { version = "0.3", features = ["full"] }
tokio = "0.2"
lazy_static = "1.4"
