[package]
name = "osm-admin-hierarchies"
version = "0.2.0"
authors = ["Magnus Kulke <mkulke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "locate"
path = "src/locate.rs"

[[bin]]
name = "bulk"
path = "src/bulk.rs"

[[bin]]
name = "build-rtree"
path = "src/build-rtree.rs"

[[bin]]
name = "service"
path = "src/service.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"

[dependencies]
bincode = "1.1"
easybench = "1.0"
rstar = { version = "0.6", features=["serde"] }
osmpbfreader = "0.14"
osm_boundaries_utils = "0.8"
geojson = { version = "0.21", features=["geo-types"] }
geo-types = { version = "0.6", features=["serde"] }
geo = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.3"
structopt = "0.3"
log = "0.4"
futures = "0.3"
actix-web = "3.3"
actix-utils = "2.0"
derive_more = "0.99"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.2"
tracing-bunyan-formatter = "0.1"
tracing-actix-web = "0.2"
tracing-opentelemetry = "0.11"
opentelemetry = { version = "0.12", default-features = false, features = ["trace", "metrics"] }
opentelemetry-jaeger = "0.11"
opentelemetry-prometheus = "0.5"
prometheus = "0.11"
actix-web-opentelemetry = { version = "0.10", features = ["metrics"] }
actix-service = "1.0"
tokio = { version = "0.2", default-features = false, features = ["rt-core", "blocking", "time", "stream", "macros"] }
reqwest = "0.10"
actix-rt = "1.1"

[dev-dependencies]
lazy_static = "1.4"

# Enable for cargo flamegraph
# [profile.release]
# debug = true
