[package]
name = "osm-admin-lookup"
version = "0.3.0"
authors = ["Magnus Kulke <mkulke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "locate"
path = "src/locate.rs"

[[bin]]
name = "bulk"
path = "src/bulk.rs"

[[bin]]
name = "build-rtree"
path = "src/build-rtree.rs"

[[bin]]
name = "admin-lookup"
path = "src/server.rs"

[dependencies]
actix-web = "4"
bincode = "1"
easybench = "1"
rstar = { version = "0.12.2", features=["serde"] }
osmpbfreader = "0.16.1"
osm_boundaries_utils = "0.12.0"
geojson = { version = "0.24.1", features=["geo-types"] }
geo-types = { version = "0.7.15", features=["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
geo = "0.29.3"
rayon = "1.3"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-actix-web = "0.7.15"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
prometheus = "0.13"
futures-util = "0.3"
time = "0.3"
lazy_static = "1.4"

# Enable for cargo flamegraph
# [profile.release]
# debug = true

